# repartee-desktop

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  logo.txt  raport.md
.github/workflows/: ci.yml  release.yml
assets/emotes/: SOURCE.md  aliases.tsv
dicts/: computing.aff  computing.dic
docs/: architecture.html  build.ts  commands.html  configuration.html  e2e.html  faq.html  first-connection.html  index.html  installation.html  logging.html  review-2026-04-13.md  rfc_ircv3_coverage.md  scripting-api.html  scripting-examples.html  scripting-getting-started.html  sessions.html  theming-format-strings.html  theming.html  web-frontend.html
docs/commands/: admin.md  alias.md  autoconnect.md  away.md  ban.md  clear.md  close.md  connect.md  cycle.md  dcc.md  deop.md  detach.md  devoice.md  disconnect.md  e2e.md  except.md  flood.md  help.md  ignore.md  image.md  info.md  invex.md  invite.md  items.md  join.md  kb.md  kick.md  kill.md  links.md  list.md  log.md  lusers.md  me.md  mentions.md  mode.md  msg.md  names.md  nick.md  notice.md  op.md  (+31 more)
docs/src/content/: architecture.md  configuration.md  e2e.md  faq.md  first-connection.md  index.md  installation.md  logging.md  scripting-api.md  scripting-examples.md  scripting-getting-started.md  sessions.md  theming-format-strings.md  theming.md  web-frontend.md
docs/src/css/: style.css
docs/src/templates/: page.html
docs/superpowers/plans/: 2026-03-13-dcc-chat-implementation.md  2026-03-14-web-frontend-phase2.md  2026-03-14-web-frontend-plan.md  2026-03-15-mobile-webui-plan.md  2026-03-18-nick-coloring.md  2026-03-19-web-hot-restart.md  2026-03-22-mentions-buffer.md  2026-04-10-v084-oom-fix.md  2026-05-09-log-browser.md  2026-06-01-emote-english-aliases.md  2026-06-01-gg-emotes-foundation-web.md  2026-06-01-gg-emotes-tui-inline.md  2026-06-02-wizard-server-form.md  2026-06-06-web-pickers-and-topic-format.md
docs/superpowers/specs/: 2026-03-13-dcc-chat-design.md  2026-03-14-web-frontend-design.md  2026-03-22-mentions-buffer-design.md  2026-03-25-split-app-rs-design.md  2026-04-10-v084-oom-fix-design.md  2026-05-09-log-browser-design.md  2026-05-10-web-improvements-design.md  2026-06-01-builtin-gg-emotes-design.md  2026-06-01-emote-english-aliases-design.md  2026-06-02-wizard-form-toolkit-design.md  2026-06-06-web-pickers-and-topic-format-design.md  2026-06-07-iced-gui-design.md
gui/: Cargo.toml  README.md
gui/src/: app.rs  config.rs  format.rs  irc_client.rs  main.rs  state.rs  theme.rs  ui.rs
scripts/: build-computing-dict.sh
scripts/irssi/: rpe2e.pl
scripts/weechat/: rpe2e.py
src/: constants.rs  fs_secure.rs  main.rs  nick_color.rs
src/app/: backlog.rs  dcc.rs  emote_anim.rs  image.rs  input.rs  irc.rs  log_browser.rs  maintenance.rs  mentions.rs  mod.rs  scripting.rs  session.rs  shell.rs  shrink.rs  web.rs  who.rs
src/commands/: docs.rs  handlers_admin.rs  handlers_dcc.rs  handlers_e2e.rs  handlers_irc.rs  handlers_logs.rs  handlers_shrink.rs  handlers_ui.rs  helpers.rs  mod.rs  parser.rs  registry.rs  settings.rs  types.rs
src/config/: defaults.rs  env.rs  mod.rs
src/dcc/: chat.rs  mod.rs  protocol.rs  types.rs
src/e2e/: chunker.rs  commands.rs  error.rs  handshake.rs  integration_tests.rs  keyring.rs  manager.rs  mod.rs  portable.rs  wire.rs
src/e2e/crypto/: aead.rs  ecdh.rs  fingerprint.rs  identity.rs  mod.rs  sig.rs
src/emotes/: mod.rs  parse.rs
src/image_preview/: cache.rs  detect.rs  fetch.rs  mod.rs
src/irc/: batch.rs  cap.rs  events.rs  extban.rs  flood.rs  formatting.rs  ignore.rs  isupport.rs  mod.rs  netsplit.rs  sasl_scram.rs
src/scripting/: api.rs  engine.rs  event_bus.rs  mod.rs
src/scripting/lua/: mod.rs
src/session/: mod.rs  protocol.rs  shim.rs  writer.rs
src/shell/: mod.rs  types.rs
src/shrink/: client.rs  mod.rs
src/spellcheck/: mod.rs
src/state/: buffer.rs  connection.rs  events.rs  mod.rs  sorting.rs
src/storage/: crypto.rs  db.rs  mod.rs  query.rs  types.rs  writer.rs
src/theme/: loader.rs  mod.rs  parser.rs
src/ui/: buffer_list.rs  chat_view.rs  emote_layout.rs  emote_picker.rs  image_overlay.rs  input.rs  layout.rs  message_line.rs  mod.rs  nick_list.rs  shell_view.rs  splash.rs  status_line.rs  styled_text.rs  topic_bar.rs
src/ui/wizard/: mod.rs  server.rs
src/web/: auth.rs  broadcast.rs  mod.rs  preview.rs  protocol.rs  server.rs  snapshot.rs  tls.rs  ws.rs
static/web/: index.html
themes/: default.theme  spring.theme
web-ui/: Cargo.toml  build.rs  index.html
web-ui/src/: app.rs  emoji.rs  emotes.rs  format.rs  main.rs  nick_color.rs  protocol.rs  state.rs  ws.rs
web-ui/src/components/: buffer_list.rs  chat_view.rs  emoji_picker.rs  emote_picker.rs  input.rs  layout.rs  login.rs  mod.rs  nick_list.rs  shell_view.rs  status_line.rs  styled.rs  topic_bar.rs  wizard.rs
web-ui/styles/: base.css  themes.css
