[package]
name = "repartee-web"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = [
    "WebSocket", "MessageEvent", "ErrorEvent", "CloseEvent",
    "Location", "Window", "Storage", "Document", "Element", "HtmlElement",
    "HtmlDocument", "HtmlInputElement", "HtmlTextAreaElement", "KeyboardEvent",
    "HtmlCanvasElement",
    "Clipboard", "Navigator", "FontFaceSet", "FontFaceSetLoadStatus",
    "ClipboardEvent", "DataTransfer",
    "TouchEvent", "Touch", "TouchList",
    # `Selection` + `NodeList` + `HtmlCollection` power the copy handler in
    # `chat_view.rs` — it walks the selection to rebuild each `.chat-line`
    # as space-separated text instead of newline-separated flex items.
    "Selection", "NodeList", "HtmlCollection",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["websocket", "http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
chrono = { version = "0.4", features = ["wasmbind"] }
futures = "0.3"
console_error_panic_hook = "0.1"
beamterm-renderer = "0.17"
emojis = "0.8"
